fix: Fix service file, readme file and bug on the cpu temp function

--- a/device-monitor-app.service
+++ b/device-monitor-app.service
@@ -1,4 +1,4 @@
-echo "[Unit]
+[Unit]
 Description=Device Monitor App
 
 [Service]
@@ -9,4 +9,4 @@ RestartSec=3
 ExecStart=/usr/bin/python3 /opt/sixfab/test_device-monitor-app/run.py
 
 [Install]
-WantedBy=multi-user.target"
+WantedBy=multi-user.target
